# excel-pm-tool

./: .gitignore  PM_Workbook.xlsm  README.md  pyproject.toml
docs/: agent-data-bridge.md  capabilities.md  design-system.md  excel-reference.md  pm-domain-reference.md  user-guide.md  vba-maintenance.md
docs/research/: excel-2026-research-dossier.md
docs/research/excel-2026/: README.md  automation-and-governance.md  dashboard-and-workbook-craft.md  excel-formulas-and-authoring.md  pm-tool-patterns.md  source-register.md  visual-reference-catalog.md
